test/src/e2e_vm_tests/test_programs/should_fail/u256/u256_only_hex_literal/src/main.sw
script; 

fn main() -> u256 {
    1u256
}